updates to website

--- a/index.html
+++ b/index.html
@@ -161,14 +161,7 @@
             <h3>Bachelor of Science, Data Science & Artificial Intelligence</h3>
             <p class="institution">Leiden University</p>
             <p class="date">2024 - 2027</p>
-            <p> <b>GPA: 8.94 / 10</b> <br>
-               Notable courses & extra-curriculuars: <br>
-               Reinforcement Learning <br>
-               Neural Computing <br>
-               Data Structures & Algorithms <br>
-               Databases <br>
-               (extra-curriculuar) Math Structures in Computer Science (covering everything from topology to smooth manifolds, and category theory)<br>
-                </p>
+            <p> <b>GPA: 8.94 / 10</b> <br></p>
         </div>
         <div class="education-item">
             <h3>International Baccalaureate</h3>
